add clojure test dependency to project