@@ -5,5 +5,7 @@
                  [org.clojure/math.combinatorics "0.3.0"]
                  [org.clojure/tools.logging "1.3.0"]
                  [ch.qos.logback/logback-classic "1.5.8"]]
-  :jvm-opts ["-Dcasc.yaml.max.aliases=\"100\""]
+  :jvm-opts ["-Xmx8g"
+             "-Djdk.attach.allowAttachSelf"
+             "-Dcasc.yaml.max.aliases=\"100\""]
   :repl-options {:init-ns armate.core})
